# JtlSync

./: package.json
old/: commands.rs  config.rs  models.rs  notifications.rs  sync.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/config/: config.json
src-tauri/src/: api.rs  commands.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  models.rs  sync.rs  utils.rs
src-tauri/src/api/: jtl.rs  mod.rs
src-tauri/src/commands/: config.rs  mod.rs  sync.rs  sync_helpers.rs  system.rs
src-tauri/src/config/: app.rs  mod.rs  shop.rs
src-tauri/src/db/: connection.rs  joomla.rs  mod.rs  models.rs
src-tauri/src/notifications/: mod.rs  platform.rs
src-tauri/src/sync/: engine.rs  mod.rs  processor.rs  stats.rs
src-tauri/src/utils/: abort.rs  emit.rs  format.rs  mapping.rs  mod.rs
src/lib/components/: ShopDashboard.svelte  ShopManager.svelte  TitleBar.svelte  index.ts
src/lib/components/orders/: OrdersTable.svelte  TableHeader.svelte
src/lib/components/schedule/: SchedulePanel.svelte
src/lib/components/stats/: LogPanel.svelte  PanelHeader.svelte  StatItem.svelte  StatPanel.svelte  StatsBar.svelte  SyncPanel.svelte  index.ts
src/lib/components/toolbar/: PaginationControls.svelte  RefreshControls.svelte  SearchBox.svelte  ToolBar.svelte
src/lib/constants/: defaultConfig.json  index.ts
src/lib/definitions/: columns.ts  index.ts  settings.ts  themes.ts
src/lib/services/: SchedulerService.ts  TauriApiService.ts
src/lib/stores/: processes.ts  settings.ts
src/lib/types/: index.ts
src/routes/: +page.svelte
