[package]
name = "jtlsync"
version = "0.1.0"
description = "JTL-Joomla Synchronization Tool"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jtlsync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = "2.0.0-beta"
tauri-plugin-opener = "2.0.0-beta"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
mysql = { version = "26.0.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11.2"
anyhow = "1.0"
lazy_static = "1.4.0"
reqwest = { version = "0.12.12", features = ["json"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
